--- a/index.html
+++ b/index.html
@@ -31,54 +31,47 @@
         </div>
     </nav>
     <div class="container py-5">
-        <div class="row">
-            <div class="col">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 text-center">Welcome to</h1>
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 text-center">Udghosh</h1>
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 text-center">2023</h1>
-            </div>
-            <div class="col">
-                <p class="mbr-text mt-3 mx-5 mbr-fonts-style fs-4 mt-5">
-                    Era University presents Udghosh 2023 'The Ray of Light' (October 31 - 4 November, 2023). An attempt to explore the extracurricular potential of students through the lens of enthralling sports and enriched cultural activities.
-                </p>
-            </div>
-        </div>
-        <div class="row mt-5">
-            <div class="col">
-                <div class="d-grid gap-2">
-                    <button class="btn" type="button">Signup for Culture fest</button>
-                </div>
-            </div>
-            <div class="col">
-                <div class="d-grid gap-2">
-                    <button class="btn" type="button">Signup for Sports Week</button>
-                </div>
-            </div>
-        </div>
+      <div class="row">
+          <div class="col">
+            <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 text-wrap">Welcome</h1>
+            <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">to</h1>
+            <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">Udghosh</h1>
+            <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">2023</h1>
+          </div>
+          <div class="col">
+            <p class="mbr-text mt-3 mx-5 mbr-fonts-style fs-4 mt-5 hehe">
+              Era University presents Udghosh 2023 'The Ray of Light' (October 31 - 4 November, 2023). An attempt to explore the extracurricular potential of students through the lens of enthralling sports and enriched cultural activities.
+            </p>
+          </div>
       </div>
-      <div class="container my-5">
-        <div class="row">
-            <div class="col">
-                <div class="glass-card">
-                    <h2 class="text-center pt-2">Culture fest</h2>
-                    <p class="text-center px-2 pb-2">Need help or any other information regarding Culture fest? Click the button below to find out more about Culture fest.</p>
-                    <div class="text-center">
-                        <button class="btn my-4" type="button">More about Culture fest</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="glass-card">
-                    <h2 class="text-center pt-2">Sports Week</h2>
-                    <p class="text-center px-2 pb-2">Need help or any other information regarding sports week? Click the button below to find out more about Sports week.</p>
-                    <div class="text-center">
-                        <button class="btn my-4" type="button">More about Sports Week</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-5">
+          <button type="button" class="btn btn-dark btn-lg px-4 gap-3 mx-2 mb-1">Signup for Culture fest</button>
+          <button type="button" class="btn btn-dark btn-lg px-4 gap-3 mx-2 mt-1">Signup for Sports Week</button>
       </div>
-      <div class="transprent my-5">
+    </div>
+    <div class="container">
+      <div class="row align-items-md-stretch">
+          <div class="col-md-6 py-4 my-4">
+            <div class="h-100 p-5 glass-card rounded-3">
+              <h2>Sports Week</h2>
+              <p>Need help or any other information regarding sports week? <br>
+                  Click the button below to find out more about Sports week.</p>
+              <button class="btn" type="button" style="font-size: 1.3rem !important;">More about Sports Week</button>
+            </div>
+          </div>
+          <div class="col-md-6 py-4 my-4">
+            <div class="h-100 p-5 glass-card rounded-3">
+              <h2>Culture fest</h2>
+              <p>Need help or any other information regarding Culture fest? <br>
+                  Click the button below to find out more about Culture fest.</p>
+              <button class="btn" type="button" style="font-size: 1.3rem !important;">More about Culture fest</button>
+            </div>
+          </div>
+        </div>
+    </div>
+  
+
+    <div class="transprent my-5">
         <div class="container">
           <footer class="py-3 mt-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -89,7 +82,7 @@
             <p class="text-center text-white">Hand Crafted with ❤ by <a class="quo" href="https://quosainhasan.github.io/cv/" target="_blank" rel="noopener noreferrer">Quosain Hasan</a></p>
           </footer>
         </div>
-      </div>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
