--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           </div>
       </div>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-5">
-          <button type="button" class="btn btn-dark btn-lg px-4 gap-3 mx-2 mb-1">Signup for Culture fest</button>
-          <button type="button" class="btn btn-dark btn-lg px-4 gap-3 mx-2 mt-1">Signup for Sports Week</button>
+          <button type="button" class="btn btn-dark btn-lg px-4 gap-3 mx-2 mb-1"><a href="./sinCultural.html">Signup for Culture fest</a></button>
+          <button type="button" class="btn btn-dark btn-lg px-4 gap-3 mx-2 mt-1"><a href="./sinSports.html">Signup for Sports Week</a></button>
       </div>
     </div>
     <div class="container">
