--- a/sinCultural.html
+++ b/sinCultural.html
@@ -28,15 +28,24 @@
           </div>
         </div>
     </nav>
+    <div class="container py-5">
+      <div class="row">
+          <div class="col">
+            <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 text-wrap">Welcome</h1>
+            <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">to</h1>
+            <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">Culture</h1>
+            <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">fest</h1>
+          </div>
+          <div class="col">
+            <p class="mbr-text mt-3 mx-5 mbr-fonts-style fs-4 mt-5 hehe">
+              Era University presents Udghosh 2023 'The Ray of Light' (October 31 - 4 November, 2023). An attempt to explore the extracurricular potential of students through the lens of enthralling sports and enriched cultural activities.
+            </p>
+          </div>
+      </div>
+    </div>
   <div id="content">
     <div class="container py-5">
         <div class="row">
-            <div class="col">
-              <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 text-wrap">Welcome</h1>
-              <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">to</h1>
-              <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">Culture</h1>
-              <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">fest</h1>
-            </div>
             <div class="col">
                 <div class="h-100 p-5 glass-card rounded-3">
                     <h2>Culture Fest</h2>
