--- a/sinCultural.html
+++ b/sinCultural.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Signup for Culture fest</title>
-  <link rel="shortcut icon" href="./image/UdFavicon.png" type="image/x-icon">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Signup for Culture fest</title>
+    <link rel="shortcut icon" href="./image/UdFavicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg transprent sticky-top">
@@ -30,13 +32,13 @@
     </nav>
     <div class="container py-5">
       <div class="row">
-          <div class="col">
+          <div class="col-lg-6 col-md-12">
             <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 text-wrap">Welcome</h1>
             <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">to</h1>
             <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">Culture</h1>
             <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">fest</h1>
           </div>
-          <div class="col">
+          <div class="col-lg-6 col-md-12">
             <p class="mbr-text mt-3 mx-5 mbr-fonts-style fs-4 mt-5 hehe">
               Era University presents Udghosh 2023 'The Ray of Light' (October 31 - 4 November, 2023). An attempt to explore the extracurricular potential of students through the lens of enthralling sports and enriched cultural activities.
             </p>
@@ -51,7 +53,7 @@
                     <h2>Culture Fest</h2>
                     <form action="#">
                         <label for="emailInput">First Name:</label>
-                        <input type="Name" id="emailInput" class="form-control" name="emailInput" placeholder="Quosain" required>
+                        <input type="text" id="emailInput" class="form-control" name="emailInput" placeholder="Quosain" required>
                         <br>
                         <button id="submit" class="btn" type="button" style="font-size: 1.3rem !important;">Sign me up</button>
                         <br>
