--- a/thankSpo.html
+++ b/thankSpo.html
@@ -36,14 +36,14 @@
               <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 text-wrap">Thank You</h1>
               <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">for</h1>
               <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">Signup</h1>
-              <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><span></span></h1>
+              <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><span class="name"></span></h1>
             </div>
         </div>
     </div>
     <div class="container my-5">
         <p>
         In the realm of sports, where passions ignite,
-        Thank you <span></span> for joining us, it feels just right.
+        Thank you <span class="name"></span> for joining us, it feels just right.
         For registering and taking the leap,
         You've joined a team where dreams run deep.
         </p>
@@ -95,11 +95,12 @@
         </div>
     </div>
     
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function() {
            var name = localStorage.getItem("userName");
-            $("span").text(name);
+            $(".name").text(name);
             $("button").click(function(){
                 localStorage.removeItem("userName");
                 window.location.href = "./sinSports.html";
