--- a/thankCul.html
+++ b/thankCul.html
@@ -68,7 +68,7 @@
         </p>
         <hr>
         <p>If for some reson you were not able to submit your from pleas click the below button</p>
-        <button type="button" class="btn btn-dark btn-lg px-4 gap-3 mx-2 mt-1">Signup for Culture fest</button>
+        <button id="reset" type="button" class="btn btn-dark btn-lg px-4 gap-3 mx-2 mt-1">Signup for Culture fest</button>
     </div>
 
     <div class="transprent my-5">
@@ -90,7 +90,7 @@
         $(document).ready(function() {
            var name = localStorage.getItem("userEmail");
             $(".name").text(name);
-            $("button").click(function(){
+            $("#reset").click(function(){
                 localStorage.removeItem("userEmail");
                 window.location.href = "./sinCultural.html";
             });
