--- a/sinSports.html
+++ b/sinSports.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Signup for Culture fest</title>
   <link rel="shortcut icon" href="./image/UdFavicon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,13 +33,13 @@
   <div id="content">
     <div class="container py-5">
         <div class="row">
-            <div class="col">
+            <div class="col-lg-6 col-md-12">
               <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 text-wrap">Welcome</h1>
               <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">to</h1>
               <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">Sports</h1>
               <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">Week</h1>
             </div>
-            <div class="col">
+            <div class="col-lg-6 col-md-12">
                 <div class="h-100 p-5 glass-card rounded-3">
                     <h2>Sports Week</h2>
                     <form action="#">
@@ -80,7 +82,8 @@
 
 
   <!-- Include jQuery from CDN -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
   <script>
     $(document).ready(function() {
